[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grange-db"
version = "0.9.0"
description = "Client for the grange document database — agent-first, crash-safe, pay-as-you-go hosted at grange.intrane.fr"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Javier Arancibia", email = "javi@intrane.fr" }]
keywords = ["database", "document-db", "agent", "machin", "grange"]

[project.urls]
Homepage = "https://github.com/javimosch/grange"
Documentation = "https://grange.intrane.fr/llms.txt"
